# underground2timetrialghosts

./: CMakeLists.txt  README.md  challengeseries.h  compression.h  d3dhook.h  main.cpp  timetrials.h  util.h
CwoeeGhosts/Challenges/: 4001_350Z_lap2_1.ug2rep  4001_350Z_lap2_10.ug2rep  4001_350Z_lap2_11.ug2rep  4001_350Z_lap2_2.ug2rep  4001_350Z_lap2_3.ug2rep  4001_350Z_lap2_4.ug2rep  4001_350Z_lap2_5.ug2rep  4001_350Z_lap2_6.ug2rep  4001_350Z_lap2_7.ug2rep  4001_350Z_lap2_8.ug2rep  4001_350Z_lap2_9.ug2rep  4012_MIATA_lap2_1.ug2rep  4012_MIATA_lap2_2.ug2rep  4012_MIATA_lap2_3.ug2rep  4014_HUMMER_1.ug2rep  4014_HUMMER_2.ug2rep  4014_HUMMER_3.ug2rep  4014_HUMMER_4.ug2rep  4014_HUMMER_5.ug2rep  4014_HUMMER_6.ug2rep  4014_HUMMER_7.ug2rep  4022_ECLIPSE_lap2_1.ug2rep  4022_ECLIPSE_lap2_2.ug2rep  4022_ECLIPSE_lap2_3.ug2rep  4022_ECLIPSE_lap2_4.ug2rep  4022_ECLIPSE_lap2_5.ug2rep  4024_240SX_lap2_1.ug2rep  4024_240SX_lap2_2.ug2rep  4024_240SX_lap2_3.ug2rep  4024_240SX_lap2_4.ug2rep  4042_350Z_lap2_1.ug2rep  4042_350Z_lap2_2.ug2rep  4042_350Z_lap2_3.ug2rep  4042_350Z_lap2_4.ug2rep  4042_350Z_lap2_5.ug2rep  4063_3000GT_1.ug2rep  4063_3000GT_2.ug2rep  4063_3000GT_3.ug2rep  4063_3000GT_4.ug2rep  4063_3000GT_5.ug2rep  (+103 more)
CwoeeGhosts/Challenges/KuruHS/: 4014_HUMMER_pb.ug2rep  4022_ECLIPSE_lap2_pb.ug2rep  4024_240SX_lap2_pb.ug2rep  4042_350Z_lap2_pb.ug2rep  4063_3000GT_pb.ug2rep  4086_IMPREZAWRX_lap2_pb.ug2rep  4088_GTO_lap2_pb.ug2rep  4102_RX8_pb.ug2rep  4107_G35_pb.ug2rep  4121_G35_pb.ug2rep  4141_TT_pb.ug2rep  4144_CELICA_pb.ug2rep  4164_350Z_pb.ug2rep  4201_LANCEREVO8_pb.ug2rep  4212_RX8_pb.ug2rep  4304_SUPRA_pb.ug2rep  4601_GTO_lap3_pb.ug2rep  4608_MUSTANGGT_lap3_pb.ug2rep  4701_3000GT_lap2_pb.ug2rep  4703_IS300_lap2_rev_pb.ug2rep  4713_G35_lap2_pb.ug2rep  4716_CIVIC_pb.ug2rep  4716_RX7_lap2_rev_pb.ug2rep
CwoeeGhosts/PresetCar/: 240SX_CUSTOM  3000GT_CUSTOM  DDAY_PLAYER_CAR_OLD_FIX  MIATA_CINGULAR  MUSTANGGT_RAZOR  RX7_CUSTOM  SKYLINE_CUSTOM  SUPRA_CUSTOM
(+9 files in other folders)
